force-app/main/default/objects/PurInvPayReq__c/PurInvPayReq__c.object-meta.xml
<CustomObject>
    <label>PROC Order Line+Trx Plan</label>
    <nameField>
        <displayFormat>PIPR-{000000}</displayFormat>
        <label>PUR INV+TRX PLAN ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PROC Order Line+Trx Plan</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>