force-app/main/default/objects/PurInvPayReq__c/fields/PaymentRequestID__c.field-meta.xml
<CustomField>
    <fullName>PaymentRequestID__c</fullName>
    <label>PAYMENT REQUEST ID</label>
    <referenceTo>PaymentRequest__c</referenceTo>
    <relationshipName>PurInvPayReq</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>