force-app/main/default/objects/PurInvPayReq__c/fields/PurchasingInvoiceID__c.field-meta.xml
<CustomField>
    <fullName>PurchasingInvoiceID__c</fullName>
    <label>PURCHASING INVOICE ID</label>
    <referenceTo>PurchasingInvoice__c</referenceTo>
    <relationshipName>PurInvPayReq</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>