force-app/main/default/objects/PurInvPayReq__c/fields/UnpaidBalancePILocalPayReq__c.field-meta.xml
<CustomField>
    <fullName>UnpaidBalancePILocalPayReq__c</fullName>
    <label>UNPAID BALANCE P/I(LOCAL)-PAY REQ</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>