force-app/main/default/objects/PurInvPayReq__c/fields/UnpaidBalancePIUSDPayReq__c.field-meta.xml
<CustomField>
    <fullName>UnpaidBalancePIUSDPayReq__c</fullName>
    <label>UNPAID BALANCE P/I(USD)-PAY REQ</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>